Исправил ошибки и страницу формы

--- a/source/index.html
+++ b/source/index.html
@@ -20,19 +20,19 @@
       </div>
       <nav class="page-header__main-nav main-nav">
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list main-nav__list--style">
-            <li class="main-nav__item main-nav__item--style main-nav__item--active">
-              <a class="main-nav__link main-nav__link--style" href="index.html">
+          <ul class="main-nav__navigation-list navigation-list">
+            <li class="main-nav__navigation-item navigation-item navigation-item--active">
+              <a class="main-nav__navigation-link navigation-link" href="index.html">
                 Главная
               </a>
             </li>
-            <li class="main-nav__item main-nav__item--style">
-              <a class="main-nav__link main-nav__link--style" href="catalog.html">
+            <li class="main-nav__navigation-item navigation-item">
+              <a class="main-nav__navigation-link navigation-link" href="catalog.html">
                 Каталог продукции
               </a>
             </li>
-            <li class="main-nav__item main-nav__item--style">
-              <a class="main-nav__link main-nav__link--style" href="form.html">
+            <li class="main-nav__navigation-item navigation-item">
+              <a class="main-nav__navigation-link navigation-link" href="form.html">
                 Подбор программы
               </a>
             </li>
@@ -44,7 +44,7 @@
   <main class="page-main">
     <section class="page-main__promo promo">
       <div class="promo__wrapper">
-        <h1 class="page-main__title page-main__title--style">Функциональное питание для котов</h1>
+        <h1 class="page-main__title-main title-main">Функциональное питание для котов</h1>
         <h2 class="visually-hidden">Выбор программы</h2>
         <p class="promo__slogan promo__slogan--style">Занялся собой? Займись котом!</p>
         <img class="promo__image" src="../img/index-can-mobile-1.png" width="280" height="270" alt="Кэт Энерджи Про">
@@ -54,21 +54,21 @@
     <section class="page-main__program program">
       <div class="program__wrapper">
         <ul class="program__list">
-          <li class="program__item program__item--style">
-            <h3 class="program__title program__title--style program__title--slim">Похудение</h3>
-            <p class="program__description program__description--style program__description--slim">Ваш кот весит больше
+          <li class="program__program-item program-item">
+            <h3 class="program__program-title program-title program-title--slim">Похудение</h3>
+            <p class="program__program-description program-description program-description--slim">Ваш кот весит больше
               собаки и почти утратил
               способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
             </p>
-            <a class="program__link program__link--style" href="catalog.html">Каталог Slim</a>
+            <a class="program__program-link program-link" href="catalog.html">Каталог Slim</a>
           </li>
-          <li class="program__item program__item--style">
-            <h3 class="program__title program__title--style program__title--pro">Набор массы</h3>
-            <p class="program__description program__description--style program__description--pro">Заработать авторитет
+          <li class="program__program-item program-item">
+            <h3 class="program__program-title program-title program-title--pro">Набор массы</h3>
+            <p class="program__program-description program-description program-description--pro">Заработать авторитет
               среди дворовых котов
               и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы.
             </p>
-            <a class="program__link program__link--style" href="catalog.html">Каталог Pro</a>
+            <a class="program__program-link program-link" href="catalog.html">Каталог Pro</a>
           </li>
         </ul>
       </div>
@@ -76,25 +76,25 @@
     <section class="page-main__features features">
       <div class="features__wrapper">
         <h2 class="visually-hidden">Особенности программы</h2>
-        <p class="features__subtitle features__subtitle--style">Как это работает</p>
+        <p class="features__features-subtitle features-subtitle">Как это работает</p>
         <ul class="features__list">
-          <li class="features__item features__item--style features__item--helpful">
-            <p class="features__description--style">
+          <li class="features__features-item features-item features-item--helpful">
+            <p class="features__features-description features-description">
               Функциональное питание содержит только полезные питательные вещества.
             </p>
           </li>
-          <li class="features__item features__item--style features__item--simply">
-            <p class="features__description--style">
+          <li class="features__features-item features-item features-item--simply">
+            <p class="features__features-description features-description">
               Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
             </p>
           </li>
-          <li class="features__item features__item--style features__item--tasty">
-            <p class="features__description--style">
+          <li class="features__features-item features-item features-item--tasty">
+            <p class="features__features-description features-description">
               Замените 1-2 приема обычной еды на наше функциональное питание.
             </p>
           </li>
-          <li class="features__item features__item--style features__item--quickly">
-            <p class="features__description--style">
+          <li class="features__features-item features-item features-item--quickly">
+            <p class="features__features-description features-description">
               Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </p>
           </li>
@@ -107,42 +107,42 @@
           <div class="example__desktop-container-1">
             <header class="example__header">
               <h2 class="visually-hidden">Результат программы</h2>
-              <p class="example__subtitle example__subtitle--style">Живой пример</p>
+              <p class="example__example-subtitle example-subtitle">Живой пример</p>
             </header>
-            <p class="example__text example__text--style">Борис сбросил 5 кг за 2 месяца, просто заменив
+            <p class="example__example-text example-text">Борис сбросил 5 кг за 2 месяца, просто заменив
               свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
               При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
             </p>
             <div class="example__container">
               <ul class="example__list">
-                <li class="example__item example__item--style">
-                  <p class="example__value example__value--style">5 кг</dt>
-                  <p class="example__description example__description--style">Снижение веса</dd>
+                <li class="example__example-item example-item">
+                  <p class="example__example-value example-value">5 кг</dt>
+                  <p class="example__example-description example-description">Снижение веса</dd>
                 </li>
-                <li class="example__item example__item--style">
-                  <p class="example__value example__value--style">60 дней</p>
-                  <p class="example__description example__description--style">Затрачено времени</p>
+                <li class="example__example-item example-item">
+                  <p class="example__example-value example-value">60 дней</p>
+                  <p class="example__example-description example-description">Затрачено времени</p>
                 </li>
               </ul>
-              <p class="example__price example__price--style">Затраты на питание: 15 000 руб.</p>
+              <p class="example__example-price example-price">Затраты на питание: 15 000 руб.</p>
             </div>
           </div>
           <div class="example__desktop-container-2">
             <div class="example__slider">
               <ul class="example__slider-list">
-                <li class="example__slide example__slide--style example__slide--before">
+                <li class="example__example-slide example-slide example-slide--before">
                   <img src="../img/mobile_fat-cat.png" width="311" height="232" alt="Толстый кот">
                 </li>
-                <li class="example__slide example__slide--style example__slide--after">
+                <li class="example__example-slide example-slide example-slide--after">
                   <img src="../img/mobile_gracile-cat.png" width="251" height="240" alt="Изящный кот">
                 </li>
               </ul>
-              <div class="example__control example__control--style">
-                <p class="example__control--before">Было</p>
-                <div class="example__scale example__scale--style">
-                  <div class="example__bar example__bar--style"></div>
+              <div class="example__example-control example-control">
+                <p class="example-control--before">Было</p>
+                <div class="example__example-scale example-scale">
+                  <div class="example__example-bar example-bar"></div>
                 </div>
-                <p class="example__control--after">Стало</p>
+                <p class="example-control--after">Стало</p>
               </div>
             </div>
           </div>
@@ -152,44 +152,44 @@
     <section class="page-main__contacts contacts">
       <div class="contacts__wrapper">
         <h2 class="visually-hidden">Наш адрес</h2>
-        <p class="contacts__invite contacts__invite--style">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
-        <address class="contacts__address contacts__address--style">ул. Большая<br>Конюшенная, д.
+        <p class="contacts__invite invite">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
+        <address class="contacts__address address">ул. Большая<br>Конюшенная, д.
           19/8<br>Санкт-Петербург</address>
       </div>
     </section>
     <section class="page-main__location location">
       <div class="location__wrapper">
         <h2 class="visually-hidden">Карта</h2>
-        <div class="location__map location__map--style"></div>
+        <div class="location__map map"></div>
       </div>
     </section>
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <a class="page-footer__logo page-footer__logo--style">
+      <a class="page-footer__logo logo">
         <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
       </a>
-      <ul class="page-footer__social-list page-footer__social-list--style">
-        <li class="page-footer__social-item page-footer__social-item--style">
-          <a class="page-footer__social-link page-footer__social-link--vkontakte"
+      <ul class="page-footer__social social">
+        <li class="social__social-item social-item">
+          <a class="social__social-link social-link social-link--vkontakte"
             href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы во Вконтакте</span>
             <img src="img/icon_vkontakte.svg" alt="Вконтакте">
           </a>
         </li>
-        <li class="page-footer__social-item page-footer__social-item--style">
-          <a class="page-footer__social-link page-footer__social-link--facebook"
+        <li class="social__social-item social-item">
+          <a class="social__social-link social-link social-link--facebook"
             href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Мы в Фейсбуке</span>
             <img src="img/icon_facebook.svg" alt="Фейсбук">
           </a>
         </li>
-        <li class="spage-footer__social-item page-footer__social-item--style">
-          <a class="page-footer__social-link page-footer__social-link--instagram"
+        <li class="social__social-item social-item">
+          <a class="social__social-link social-link social-link--instagram"
             href="https://www.instagram.com/htmlacademy"><span class="visually-hidden">Мы в Инстаграме</span>
             <img src="img/icon_instagram.svg" alt="Инстаграм">
           </a>
         </li>
       </ul>
-      <a class="page-footer__copyright page-footer__copyright--style"
+      <a class="page-footer__copyright copyright"
         href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
