--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -20,19 +20,19 @@
       </div>
       <nav class="page-header__main-nav main-nav">
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list main-nav__list--style">
-            <li class="main-nav__item main-nav__item--style main-nav__item--active">
-              <a class="main-nav__link main-nav__link--style" href="index.html">
+          <ul class="main-nav__navigation-list navigation-list">
+            <li class="main-nav__navigation-item navigation-item navigation-item--active">
+              <a class="main-nav__navigation-link navigation-link" href="index.html">
                 Главная
               </a>
             </li>
-            <li class="main-nav__item main-nav__item--style">
-              <a class="main-nav__link main-nav__link--style" href="catalog.html">
+            <li class="main-nav__navigation-item navigation-item">
+              <a class="main-nav__navigation-link navigation-link" href="catalog.html">
                 Каталог продукции
               </a>
             </li>
-            <li class="main-nav__item main-nav__item--style">
-              <a class="main-nav__link main-nav__link--style" href="form.html">
+            <li class="main-nav__navigation-item navigation-item">
+              <a class="main-nav__navigation-link navigation-link" href="form.html">
                 Подбор программы
               </a>
             </li>
@@ -42,7 +42,7 @@
     </div>
   </header>
   <main class="page-main">
-    <h1 class="page-main__title page-main__title--style page-main__title--catalog">Каталог продукции</h1>
+    <h1 class="page-main__title-main title-main title-main--catalog">Каталог продукции</h1>
     <section class="page-main__basic-products basic-products">
       <div class="basic-products__wrapper">
         <h2 class="visually-hidden">Основные товары</h2>
@@ -52,7 +52,7 @@
               <img class="basic-products__image" src="../img/catalog_chiсken-500.png" width="68" height="86"
                 alt="Упаковка 500 грамм со вкусом курицы">
               <div class="basic-products__description-wrapper">
-                <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 500 Г</p>
+                <p class="basic-products__description">CAT ENERGY<br>PRO 500 Г</p>
                 <dl class="basic-products__list">
                   <dt>Масса</dt>
                   <dd>500 г</dd>
@@ -70,7 +70,7 @@
               <img class="basic-products__image" src="../img/catalog_chiсken-1000.png" width="84" height="100"
                 alt="Упаковка 1000 грамм со вкусом курицы">
               <div class="basic-products__description-wrapper">
-                <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 1000 Г</p>
+                <p class="basic-products__description">CAT ENERGY<br>PRO 1000 Г</p>
                 <dl class="basic-products__list">
                   <dt>Масса</dt>
                   <dd>1000 г</dd>
@@ -88,7 +88,7 @@
               <img class="basic-products__image" src="../img/catalog_fish-500.png" width="68" height="86"
                 alt="Упаковка 500 грамм со вкусом рыбы">
               <div class="basic-products__description-wrapper">
-                <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 500 Г</p>
+                <p class="basic-products__description">CAT ENERGY<br>PRO 500 Г</p>
                 <dl class="basic-products__list">
                   <dt>Масса</dt>
                   <dd>500 г</dd>
@@ -106,7 +106,7 @@
               <img class="basic-products__image" src="../img/catalog_fish-1000.png" width="84" height="100"
                 alt="Упаковка 1000 грамм со вкусом рыбы">
               <div class="basic-products__description-wrapper">
-                <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 1000 Г</p>
+                <p class="basic-products__description">CAT ENERGY<br>PRO 1000 Г</p>
                 <dl class="basic-products__list">
                   <dt>Масса</dt>
                   <dd>1000 г</dd>
@@ -124,7 +124,7 @@
               <img class="basic-products__image" src="../img/catalog_buckwheat-500.png" width="68" height="86"
                 alt="Упаковка 500 грамм со вкусом гречки">
               <div class="basic-products__description-wrapper">
-                <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>SLIM 500 Г</p>
+                <p class="basic-products__description">CAT ENERGY<br>SLIM 500 Г</p>
                 <dl class="basic-products__list">
                   <dt>Масса</dt>
                   <dd>500 г</dd>
@@ -142,7 +142,7 @@
               <img class="basic-products__image" src="../img/catalog_buckwheat-1000.png" width="84" height="100"
                 alt="Упаковка 1000 грамм со вкусом гречки">
               <div class="basic-products__description-wrapper">
-                <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>SLIM 1000 Г</p>
+                <p class="basic-products__description">CAT ENERGY<br>SLIM 1000 Г</p>
                 <dl class="basic-products__list">
                   <dt>Масса</dt>
                   <dd>1000 г</dd>
@@ -160,7 +160,7 @@
               <img class="basic-products__image" src="../img/catalog_rice-500.png" width="68" height="86"
                 alt="Упаковка 500 грамм со вкусом риса">
               <div class="basic-products__description-wrapper">
-                <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>SLIM 500 Г</p>
+                <p class="basic-products__description">CAT ENERGY<br>SLIM 500 Г</p>
                 <dl class="basic-products__list">
                   <dt>Масса</dt>
                   <dd>500 г</dd>
@@ -174,11 +174,11 @@
             <a class="basic-products__button button button--basic-products-style" href="#">Заказать</a>
           </li>
           <li class="basic-products__item ">
-            <div class="basic-products__item-box">
+            <div class="basic-products__item-box item-box">
               <p
-                class="basic-products__description basic-products__description--style basic-products__description--more">
+                class="basic-products__description-more description-more">
                 Показать еще 100500товаров</p>
-              <p class="basic-products__text basic-products__text--style">На самом деле вкусов гораздо больше!</p>
+              <p class="basic-products__text-more text-more">На самом деле вкусов гораздо больше!</p>
               <a class="basic-products__button button button--basic-products-style button--basic-products-more"
                 href="#">Показать
                 все</a>
@@ -186,7 +186,7 @@
     </section>
     <section class="additional-products">
       <div class="additional-products__wrapper">
-        <h2 class="additional-products__title additional-products__title--style">Дополнительные товары</h2>
+        <h2 class="additional-products__title">Дополнительные товары</h2>
         <ul class="additional-products__items">
           <li class="additional-products__item">
             <p class="additional-products__description">Сахарозаменитель</p>
@@ -226,52 +226,52 @@
     <section class="present">
       <div class="present-wrapper">
         <h2 class="visually-hidden">Подарок</h2>
-        <div class="present__image present__image--style">
-          <p class="present__text present__text--style">Закажите все и получите чеход для кота в подарок!</p>
+        <div class="present__image">
+          <p class="present__text">Закажите все и получите чеход для кота в подарок!</p>
         </div>
       </div>
     </section>
     <section class="page-main__contacts contacts contacts--background">
       <div class="contacts__wrapper">
         <h2 class="visually-hidden">Наш адрес</h2>
-        <p class="contacts__invite contacts__invite--style">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
-        <address class="contacts__address contacts__address--style">ул. Большая<br>Конюшенная, д.
+        <p class="contacts__invite invite">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
+        <address class="contacts__address address">ул. Большая<br>Конюшенная, д.
           19/8<br>Санкт-Петербург</address>
       </div>
     </section>
     <section class="page-main__location location">
-      <h2 class="visually-hidden">Карта</h2>
       <div class="location__wrapper">
-        <div class="location__map location__map--style"></div>
+        <h2 class="visually-hidden">Карта</h2>
+        <div class="location__map map"></div>
       </div>
     </section>
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <a class="page-footer__logo page-footer__logo--style">
+      <a class="page-footer__logo logo">
         <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
       </a>
-      <ul class="page-footer__social-list page-footer__social-list--style">
-        <li class="page-footer__social-item page-footer__social-item--style">
-          <a class="page-footer__social-link page-footer__social-link--vkontakte"
+      <ul class="page-footer__social social">
+        <li class="social__social-item social-item">
+          <a class="social__social-link social-link social-link--vkontakte"
             href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы во Вконтакте</span>
             <img src="img/icon_vkontakte.svg" alt="Вконтакте">
           </a>
         </li>
-        <li class="page-footer__social-item page-footer__social-item--style">
-          <a class="page-footer__social-link page-footer__social-link--facebook"
+        <li class="social__social-item social-item">
+          <a class="social__social-link social-link social-link--facebook"
             href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Мы в Фейсбуке</span>
             <img src="img/icon_facebook.svg" alt="Фейсбук">
           </a>
         </li>
-        <li class="spage-footer__social-item page-footer__social-item--style">
-          <a class="page-footer__social-link page-footer__social-link--instagram"
+        <li class="social__social-item social-item">
+          <a class="social__social-link social-link social-link--instagram"
             href="https://www.instagram.com/htmlacademy"><span class="visually-hidden">Мы в Инстаграме</span>
             <img src="img/icon_instagram.svg" alt="Инстаграм">
           </a>
         </li>
       </ul>
-      <a class="page-footer__copyright page-footer__copyright--style"
+      <a class="page-footer__copyright copyright"
         href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
