Сверстал десктоп формы

--- a/source/form.html
+++ b/source/form.html
@@ -65,7 +65,6 @@
               </div>
             </fieldset>
             <fieldset class="form__scheme scheme">
-              
               <input type="radio" name="option" id="option-1" value="slimming" checked>
               <label for="option-1">Похудение</label>
               <input type="radio" name="option" id="option-2" value="weight-gain">
@@ -89,7 +88,9 @@
           </fieldset>
           <fieldset class="form__comment comment">
             <legend>Комментарий</legend>
-            <textarea name="comment" id="owner-comment">Расскажите обо всех повадках кота</textarea>
+            <div class="comment__wrapper">
+              <textarea name="comment" id="owner-comment">Расскажите обо всех повадках кота</textarea>
+            </div>
           </fieldset>
           <fieldset class="form__additive additive">
             <legend>Дополнительно</legend>
