--- a/source/catalog.html
+++ b/source/catalog.html
@@ -52,7 +52,7 @@
               <img class="basic-products__image" src="../img/catalog_chiсken-500.png" width="68" height="86"
                 alt="Упаковка 500 грамм со вкусом курицы">
               <div class="basic-products__description-wrapper">
-                <p class="basic-products__description">CAT ENERGY<br>PRO 500 Г</p>
+                <p class="basic-products__description">CAT ENERGY PRO 500 Г</p>
                 <dl class="basic-products__list">
                   <dt>Масса</dt>
                   <dd>500 г</dd>
@@ -70,7 +70,7 @@
               <img class="basic-products__image" src="../img/catalog_chiсken-1000.png" width="84" height="100"
                 alt="Упаковка 1000 грамм со вкусом курицы">
               <div class="basic-products__description-wrapper">
-                <p class="basic-products__description">CAT ENERGY<br>PRO 1000 Г</p>
+                <p class="basic-products__description">CAT ENERGY PRO 1000 Г</p>
                 <dl class="basic-products__list">
                   <dt>Масса</dt>
                   <dd>1000 г</dd>
@@ -88,7 +88,7 @@
               <img class="basic-products__image" src="../img/catalog_fish-500.png" width="68" height="86"
                 alt="Упаковка 500 грамм со вкусом рыбы">
               <div class="basic-products__description-wrapper">
-                <p class="basic-products__description">CAT ENERGY<br>PRO 500 Г</p>
+                <p class="basic-products__description">CAT ENERGY PRO 500 Г</p>
                 <dl class="basic-products__list">
                   <dt>Масса</dt>
                   <dd>500 г</dd>
@@ -106,7 +106,7 @@
               <img class="basic-products__image" src="../img/catalog_fish-1000.png" width="84" height="100"
                 alt="Упаковка 1000 грамм со вкусом рыбы">
               <div class="basic-products__description-wrapper">
-                <p class="basic-products__description">CAT ENERGY<br>PRO 1000 Г</p>
+                <p class="basic-products__description">CAT ENERGY PRO 1000 Г</p>
                 <dl class="basic-products__list">
                   <dt>Масса</dt>
                   <dd>1000 г</dd>
@@ -124,7 +124,7 @@
               <img class="basic-products__image" src="../img/catalog_buckwheat-500.png" width="68" height="86"
                 alt="Упаковка 500 грамм со вкусом гречки">
               <div class="basic-products__description-wrapper">
-                <p class="basic-products__description">CAT ENERGY<br>SLIM 500 Г</p>
+                <p class="basic-products__description">CAT ENERGY SLIM 500 Г</p>
                 <dl class="basic-products__list">
                   <dt>Масса</dt>
                   <dd>500 г</dd>
@@ -142,7 +142,7 @@
               <img class="basic-products__image" src="../img/catalog_buckwheat-1000.png" width="84" height="100"
                 alt="Упаковка 1000 грамм со вкусом гречки">
               <div class="basic-products__description-wrapper">
-                <p class="basic-products__description">CAT ENERGY<br>SLIM 1000 Г</p>
+                <p class="basic-products__description">CAT ENERGY SLIM 1000 Г</p>
                 <dl class="basic-products__list">
                   <dt>Масса</dt>
                   <dd>1000 г</dd>
@@ -160,7 +160,7 @@
               <img class="basic-products__image" src="../img/catalog_rice-500.png" width="68" height="86"
                 alt="Упаковка 500 грамм со вкусом риса">
               <div class="basic-products__description-wrapper">
-                <p class="basic-products__description">CAT ENERGY<br>SLIM 500 Г</p>
+                <p class="basic-products__description">CAT ENERGY SLIM 500 Г</p>
                 <dl class="basic-products__list">
                   <dt>Масса</dt>
                   <dd>500 г</dd>
@@ -175,62 +175,62 @@
           </li>
           <li class="basic-products__item ">
             <div class="basic-products__item-box item-box">
-              <p
-                class="basic-products__description-more description-more">
-                Показать еще 100500товаров</p>
+              <p class="basic-products__description-more description-more">Показать еще 100500товаров</p>
               <p class="basic-products__text-more text-more">На самом деле вкусов гораздо больше!</p>
               <a class="basic-products__button button button--basic-products-style button--basic-products-more"
-                href="#">Показать
-                все</a>
+                href="#">Показать все</a>
+            </div>
           </li>
     </section>
-    <section class="additional-products">
-      <div class="additional-products__wrapper">
-        <h2 class="additional-products__title">Дополнительные товары</h2>
-        <ul class="additional-products__items">
-          <li class="additional-products__item">
-            <p class="additional-products__description">Сахарозаменитель</p>
-            <dl class="additional-products__list">
-              <dt>1 упаковка (100 г)</dt>
-              <dd>200 Р.</dd>
-            </dl>
-            <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
-          </li>
-          <li class="additional-products__item">
-            <p class="additional-products__description">Питьевая вода</p>
-            <dl class="additional-products__list">
-              <dt>5 литров</dt>
-              <dd>50 Р.</dd>
-            </dl>
-            <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
-          </li>
-          <li class="additional-products__item">
-            <p class="additional-products__description">Молоко</p>
-            <dl class="additional-products__list">
-              <dt>1 литр</dt>
-              <dd>100 Р.</dd>
-            </dl>
-            <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
-          </li>
-          <li class="additional-products__item">
-            <p class="additional-products__description">Витамины</p>
-            <dl class="additional-products__list">
-              <dt>1 упаковка (30 г)</dt>
-              <dd>300 Р.</dd>
-            </dl>
-            <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="present">
-      <div class="present-wrapper">
-        <h2 class="visually-hidden">Подарок</h2>
-        <div class="present__image">
-          <p class="present__text">Закажите все и получите чеход для кота в подарок!</p>
+    <div class="page-main__section-container">
+      <section class="additional-products">
+        <div class="additional-products__wrapper">
+          <h2 class="additional-products__title">Дополнительные товары</h2>
+          <ul class="additional-products__items">
+            <li class="additional-products__item">
+              <p class="additional-products__description">Сахарозаменитель</p>
+              <dl class="additional-products__list">
+                <dt>1 упаковка (100 г)</dt>
+                <dd>200 Р.</dd>
+              </dl>
+              <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
+            </li>
+            <li class="additional-products__item">
+              <p class="additional-products__description">Питьевая вода</p>
+              <dl class="additional-products__list">
+                <dt>5 литров</dt>
+                <dd>50 Р.</dd>
+              </dl>
+              <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
+            </li>
+            <li class="additional-products__item">
+              <p class="additional-products__description">Молоко</p>
+              <dl class="additional-products__list">
+                <dt>1 литр</dt>
+                <dd>100 Р.</dd>
+              </dl>
+              <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
+            </li>
+            <li class="additional-products__item">
+              <p class="additional-products__description">Витамины</p>
+              <dl class="additional-products__list">
+                <dt>1 упаковка (30 г)</dt>
+                <dd>300 Р.</dd>
+              </dl>
+              <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
+            </li>
+          </ul>
         </div>
-      </div>
-    </section>
+      </section>
+      <section class="present">
+        <div class="present-wrapper">
+          <h2 class="visually-hidden">Подарок</h2>
+          <div class="present__image">
+            <p class="present__text">Закажите все и получите чеход для кота в подарок!</p>
+          </div>
+        </div>
+      </section>
+    </div>
     <section class="page-main__contacts contacts contacts--background">
       <div class="contacts__wrapper">
         <h2 class="visually-hidden">Наш адрес</h2>
@@ -253,8 +253,8 @@
       </a>
       <ul class="page-footer__social social">
         <li class="social__social-item social-item">
-          <a class="social__social-link social-link social-link--vkontakte"
-            href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы во Вконтакте</span>
+          <a class="social__social-link social-link social-link--vkontakte" href="https://vk.com/htmlacademy"><span
+              class="visually-hidden">Мы во Вконтакте</span>
             <img src="img/icon_vkontakte.svg" alt="Вконтакте">
           </a>
         </li>
@@ -271,8 +271,7 @@
           </a>
         </li>
       </ul>
-      <a class="page-footer__copyright copyright"
-        href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      <a class="page-footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
 </body>
