начал адаптивный декор

--- a/source/index.html
+++ b/source/index.html
@@ -16,9 +16,9 @@
           <img src="img/logo-mobile.svg" width="33" height="37" alt="Логотип">
           <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
         </a>
-        <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <button class="page-header__toggle page-header__toggle--closed" type="button"><span class="visually-hidden">Открыть меню</span></button>
       </div>
-      <nav class="page-header__main-nav main-nav">
+      <nav class="page-header__main-nav main-nav main-nav--open">
         <div class="main-nav__wrapper">
           <ul class="main-nav__navigation-list navigation-list">
             <li class="main-nav__navigation-item navigation-item navigation-item--active">
