доверстал index tablet

--- a/source/index.html
+++ b/source/index.html
@@ -58,8 +58,8 @@
           <li class="program__program-item program-item">
             <h3 class="program__program-title program-title program-title--slim">Похудение</h3>
             <p class="program__program-description program-description program-description--slim">Ваш кот весит больше
-              собаки и почти утратил
-              способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+              собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему
+              питомцу <br>сбросить лишний вес.
             </p>
             <a class="program__program-link program-link" href="catalog.html">Каталог Slim</a>
           </li>
@@ -67,7 +67,7 @@
             <h3 class="program__program-title program-title program-title--pro">Набор массы</h3>
             <p class="program__program-description program-description program-description--pro">Заработать авторитет
               среди дворовых котов
-              и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы.
+              и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые <br>мышцы!
             </p>
             <a class="program__program-link program-link" href="catalog.html">Каталог Pro</a>
           </li>
@@ -91,7 +91,7 @@
           </li>
           <li class="features__features-item features-item features-item--tasty">
             <p class="features__features-description features-description">
-              Замените 1-2 приема обычной еды на наше функциональное питание.
+              Замените один-два приема обычной еды на наше функциональное питание.
             </p>
           </li>
           <li class="features__features-item features-item features-item--quickly">
@@ -125,7 +125,10 @@
                   <p class="example__example-description example-description">Затрачено времени</p>
                 </li>
               </ul>
-              <p class="example__example-price example-price">Затраты на питание: 15 000 руб.</p>
+              <div class="example__example-price example-price">
+                <p class="example-price__text">Затраты на питание:</p>
+                <p class="example-price__sum">15 000 руб.</p>
+              </div>
             </div>
           </div>
           <div class="example__desktop-container-2">
