начал доверстывать форму

--- a/source/index.html
+++ b/source/index.html
@@ -16,19 +16,20 @@
           <img src="img/logo-mobile.svg" width="33" height="37" alt="Логотип">
           <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
         </a>
-        <button class="page-header__toggle page-header__toggle--closed" type="button"><span
-            class="visually-hidden">Открыть меню</span></button>
+        <button class="page-header__toggle page-header__toggle--closed" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
       </div>
       <nav class="page-header__main-nav main-nav main-nav--open">
         <div class="main-nav__wrapper">
           <ul class="main-nav__navigation-list navigation-list">
-            <li class="main-nav__navigation-item navigation-item navigation-item--active">
-              <a class="main-nav__navigation-link navigation-link" href="index.html">
+            <li class="main-nav__navigation-item navigation-item">
+              <a class="main-nav__navigation-link navigation-link  navigation-link--active" href="index.html">
                 Главная
               </a>
             </li>
             <li class="main-nav__navigation-item navigation-item">
-              <a class="main-nav__navigation-link navigation-link" href="catalog.html">
+              <a class="main-nav__navigation-link navigation-link navigation-link--index" href="catalog.html">
                 Каталог продукции
               </a>
             </li>
@@ -55,7 +56,7 @@
     <section class="page-main__program program">
       <div class="program__wrapper">
         <ul class="program__list">
-          <li class="program__program-item program-item">
+          <li class="program__program-item program-item program-item--slim">
             <h3 class="program__program-title program-title program-title--slim">Похудение</h3>
             <p class="program__program-description program-description program-description--slim">Ваш кот весит больше
               собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему
@@ -63,7 +64,7 @@
             </p>
             <a class="program__program-link program-link" href="catalog.html">Каталог Slim</a>
           </li>
-          <li class="program__program-item program-item">
+          <li class="program__program-item program-item program-item--pro">
             <h3 class="program__program-title program-title program-title--pro">Набор массы</h3>
             <p class="program__program-description program-description program-description--pro">Заработать авторитет
               среди дворовых котов
