доверстал страницу формы

--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__navigation-list navigation-list">
             <li class="main-nav__navigation-item navigation-item">
-              <a class="main-nav__navigation-link navigation-link  navigation-link--active" href="index.html">
+              <a class="main-nav__navigation-link navigation-link navigation-link--index navigation-link--active" href="index.html">
                 Главная
               </a>
             </li>
@@ -34,7 +34,7 @@
               </a>
             </li>
             <li class="main-nav__navigation-item navigation-item">
-              <a class="main-nav__navigation-link navigation-link" href="form.html">
+              <a class="main-nav__navigation-link navigation-link navigation-link--index" href="form.html">
                 Подбор программы
               </a>
             </li>
