--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,8 +13,12 @@
     <div class="page-header__container">
       <div class="page-header__wrapper">
         <a class="page-header__logo logo" href="#">
-          <img src="img/logo-mobile.svg" width="33" height="37" alt="Логотип">
-          <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="logo__icon" src="img/logo-mobile-icon.svg" alt="Логотип">
+            <img class="logo__text" src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
+          </picture>
         </a>
         <button class="page-header__toggle page-header__toggle--closed" type="button">
           <span class="visually-hidden">Открыть меню </span>
@@ -51,8 +55,8 @@
         <ul class="basic-products__items">
           <li class="basic-products__item">
             <div class="basic-products__item-wrapper">
-              <img class="basic-products__image" src="../img/catalog_chiсken-500.png" width="68" height="86"
-                alt="Упаковка 500 грамм со вкусом курицы">
+              <img class="basic-products__image basic-products__image--small" src="../img/catalog_chiсken-500.png"
+                width="68" height="86" alt="Упаковка 500 грамм со вкусом курицы">
               <div class="basic-products__description-wrapper">
                 <p class="basic-products__description">CAT ENERGY PRO 500 Г</p>
                 <dl class="basic-products__list">
@@ -69,8 +73,8 @@
           </li>
           <li class="basic-products__item">
             <div class="basic-products__item-wrapper">
-              <img class="basic-products__image" src="../img/catalog_chiсken-1000.png" width="84" height="100"
-                alt="Упаковка 1000 грамм со вкусом курицы">
+              <img class="basic-products__image basic-products__image--big" src="../img/catalog_chiсken-1000.png"
+                width="84" height="100" alt="Упаковка 1000 грамм со вкусом курицы">
               <div class="basic-products__description-wrapper">
                 <p class="basic-products__description">CAT ENERGY PRO 1000 Г</p>
                 <dl class="basic-products__list">
@@ -87,8 +91,8 @@
           </li>
           <li class="basic-products__item">
             <div class="basic-products__item-wrapper">
-              <img class="basic-products__image" src="../img/catalog_fish-500.png" width="68" height="86"
-                alt="Упаковка 500 грамм со вкусом рыбы">
+              <img class="basic-products__image basic-products__image--small" src="../img/catalog_fish-500.png"
+                width="68" height="86" alt="Упаковка 500 грамм со вкусом рыбы">
               <div class="basic-products__description-wrapper">
                 <p class="basic-products__description">CAT ENERGY PRO 500 Г</p>
                 <dl class="basic-products__list">
@@ -105,8 +109,8 @@
           </li>
           <li class="basic-products__item">
             <div class="basic-products__item-wrapper">
-              <img class="basic-products__image" src="../img/catalog_fish-1000.png" width="84" height="100"
-                alt="Упаковка 1000 грамм со вкусом рыбы">
+              <img class="basic-products__image basic-products__image--big" src="../img/catalog_fish-1000.png"
+                width="84" height="100" alt="Упаковка 1000 грамм со вкусом рыбы">
               <div class="basic-products__description-wrapper">
                 <p class="basic-products__description">CAT ENERGY PRO 1000 Г</p>
                 <dl class="basic-products__list">
@@ -123,8 +127,8 @@
           </li>
           <li class="basic-products__item">
             <div class="basic-products__item-wrapper">
-              <img class="basic-products__image" src="../img/catalog_buckwheat-500.png" width="68" height="86"
-                alt="Упаковка 500 грамм со вкусом гречки">
+              <img class="basic-products__image basic-products__image--small" src="../img/catalog_buckwheat-500.png"
+                width="68" height="86" alt="Упаковка 500 грамм со вкусом гречки">
               <div class="basic-products__description-wrapper">
                 <p class="basic-products__description">CAT ENERGY SLIM 500 Г</p>
                 <dl class="basic-products__list">
@@ -141,8 +145,8 @@
           </li>
           <li class="basic-products__item">
             <div class="basic-products__item-wrapper">
-              <img class="basic-products__image" src="../img/catalog_buckwheat-1000.png" width="84" height="100"
-                alt="Упаковка 1000 грамм со вкусом гречки">
+              <img class="basic-products__image basic-products__image--big" src="../img/catalog_buckwheat-1000.png"
+                width="84" height="100" alt="Упаковка 1000 грамм со вкусом гречки">
               <div class="basic-products__description-wrapper">
                 <p class="basic-products__description">CAT ENERGY SLIM 1000 Г</p>
                 <dl class="basic-products__list">
@@ -159,8 +163,8 @@
           </li>
           <li class="basic-products__item">
             <div class="basic-products__item-wrapper">
-              <img class="basic-products__image" src="../img/catalog_rice-500.png" width="68" height="86"
-                alt="Упаковка 500 грамм со вкусом риса">
+              <img class="basic-products__image basic-products__image--small" src="../img/catalog_rice-500.png"
+                width="68" height="86" alt="Упаковка 500 грамм со вкусом риса">
               <div class="basic-products__description-wrapper">
                 <p class="basic-products__description">CAT ENERGY SLIM 500 Г</p>
                 <dl class="basic-products__list">
@@ -175,7 +179,7 @@
             </div>
             <a class="basic-products__button button button--basic-products-style" href="#">Заказать</a>
           </li>
-          <li class="basic-products__item ">
+          <li class="basic-products__item basic-products__item--more">
             <div class="basic-products__item-box item-box">
               <p class="basic-products__description-more description-more">Показать еще 100500 товаров</p>
               <p class="basic-products__text-more text-more">На самом деле вкусов гораздо больше!</p>
@@ -190,35 +194,43 @@
           <h2 class="additional-products__title">Дополнительные товары</h2>
           <ul class="additional-products__items">
             <li class="additional-products__item">
-              <p class="additional-products__description">Сахарозаменитель</p>
-              <dl class="additional-products__list">
-                <dt>1 упаковка (100 г)</dt>
-                <dd>200 Р.</dd>
-              </dl>
+              <div class="additional-products__description-wrapper">
+                <p class="additional-products__description">Сахарозаменитель</p>
+                <dl class="additional-products__list">
+                  <dt>1 упаковка (100 г)</dt>
+                  <dd>200 Р.</dd>
+                </dl>
+              </div>
               <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
             </li>
             <li class="additional-products__item">
-              <p class="additional-products__description">Питьевая вода</p>
-              <dl class="additional-products__list">
-                <dt>5 литров</dt>
-                <dd>50 Р.</dd>
-              </dl>
+              <div class="additional-products__description-wrapper">
+                <p class="additional-products__description">Питьевая вода</p>
+                <dl class="additional-products__list">
+                  <dt>5 литров</dt>
+                  <dd>50 Р.</dd>
+                </dl>
+              </div>
               <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
             </li>
             <li class="additional-products__item">
-              <p class="additional-products__description">Молоко</p>
-              <dl class="additional-products__list">
-                <dt>1 литр</dt>
-                <dd>100 Р.</dd>
-              </dl>
+              <div class="additional-products__description-wrapper">
+                <p class="additional-products__description">Молоко</p>
+                <dl class="additional-products__list">
+                  <dt>1 литр</dt>
+                  <dd>100 Р.</dd>
+                </dl>
+              </div>
               <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
             </li>
             <li class="additional-products__item">
-              <p class="additional-products__description">Витамины</p>
-              <dl class="additional-products__list">
-                <dt>1 упаковка (30 г)</dt>
-                <dd>300 Р.</dd>
-              </dl>
+              <div class="additional-products__description-wrapper">
+                <p class="additional-products__description">Витамины</p>
+                <dl class="additional-products__list">
+                  <dt>1 упаковка (30 г)</dt>
+                  <dd>300 Р.</dd>
+                </dl>
+              </div>
               <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
             </li>
           </ul>
@@ -270,7 +282,7 @@
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M7.98438 0.0625C9.31771 0.0625 10.4062 0.078125 11.25 0.109375C11.9688 0.140625 12.6094 0.265625 13.1719 0.484375C13.7135 0.692708 14.1823 0.994792 14.5781 1.39062C14.974 1.78646 15.276 2.25521 15.4844 2.79687C15.7031 3.35937 15.8281 4 15.8594 4.71875C15.8906 5.5625 15.9062 6.65104 15.9062 7.98437C15.9062 9.31771 15.8906 10.4062 15.8594 11.25C15.8281 11.9687 15.7031 12.6094 15.4844 13.1719C15.276 13.7135 14.974 14.1823 14.5781 14.5781C14.1823 14.974 13.7135 15.276 13.1719 15.4844C12.6094 15.7031 11.9688 15.8281 11.25 15.8594C10.4062 15.8906 9.31771 15.9062 7.98438 15.9062C6.65104 15.9062 5.5625 15.8906 4.71875 15.8594C4 15.8281 3.35938 15.7031 2.79688 15.4844C2.25521 15.276 1.78646 14.974 1.39062 14.5781C0.994792 14.1823 0.692708 13.7135 0.484375 13.1719C0.265625 12.6094 0.140625 11.9687 0.109375 11.25C0.078125 10.4062 0.0625 9.31771 0.0625 7.98437C0.0625 6.65104 0.078125 5.5625 0.109375 4.71875C0.140625 4 0.265625 3.35937 0.484375 2.79687C0.692708 2.25521 0.994792 1.78646 1.39062 1.39062C1.78646 0.994792 2.25521 0.692708 2.79688 0.484375C3.35938 0.265625 4 0.140625 4.71875 0.109375C5.5625 0.078125 6.65104 0.0625 7.98438 0.0625ZM7.98438 1.09375C6.59896 1.09375 5.46875 1.10937 4.59375 1.14062C4.03125 1.16146 3.51042 1.26042 3.03125 1.4375C2.28125 1.75 1.75 2.28125 1.4375 3.03125C1.26042 3.51042 1.16146 4.03125 1.14062 4.59375C1.10938 5.46875 1.09375 6.59896 1.09375 7.98437C1.09375 9.36979 1.10938 10.5 1.14062 11.375C1.16146 11.9375 1.26042 12.4583 1.4375 12.9375C1.75 13.6875 2.28125 14.2187 3.03125 14.5312C3.51042 14.7083 4.03125 14.8073 4.59375 14.8281C5.46875 14.8594 6.59896 14.875 7.98438 14.875C9.36979 14.875 10.5 14.8594 11.375 14.8281C11.9375 14.8073 12.4583 14.7083 12.9375 14.5312C13.6875 14.2187 14.2188 13.6875 14.5312 12.9375C14.7083 12.4583 14.8073 11.9375 14.8281 11.375C14.8594 10.5 14.875 9.36979 14.875 7.98437C14.875 6.59896 14.8594 5.46875 14.8281 4.59375C14.8073 4.03125 14.7083 3.51042 14.5312 3.03125C14.2188 2.28125 13.6875 1.75 12.9375 1.4375C12.4583 1.26042 11.9375 1.16146 11.375 1.14062C10.5 1.10937 9.36979 1.09375 7.98438 1.09375ZM7.98438 11.1562C8.85938 11.1562 9.60677 10.8464 10.2266 10.2266C10.8464 9.60677 11.1562 8.85937 11.1562 7.98437C11.1562 7.10937 10.8464 6.36198 10.2266 5.74219C9.60677 5.1224 8.85938 4.8125 7.98438 4.8125C7.10938 4.8125 6.36198 5.1224 5.74219 5.74219C5.1224 6.36198 4.8125 7.10937 4.8125 7.98437C4.8125 8.85937 5.1224 9.60677 5.74219 10.2266C6.36198 10.8464 7.10938 11.1562 7.98438 11.1562ZM7.98438 3.92187C9.10938 3.92187 10.0677 4.31771 10.8594 5.10937C11.651 5.90104 12.0469 6.85937 12.0469 7.98437C12.0469 9.10937 11.651 10.0677 10.8594 10.8594C10.0677 11.651 9.10938 12.0469 7.98438 12.0469C6.85938 12.0469 5.90104 11.651 5.10938 10.8594C4.31771 10.0677 3.92188 9.10937 3.92188 7.98437C3.92188 6.85937 4.31771 5.90104 5.10938 5.10937C5.90104 4.31771 6.85938 3.92187 7.98438 3.92187ZM13.1719 3.76562C13.1719 4.02604 13.0781 4.2474 12.8906 4.42969C12.7031 4.61198 12.474 4.70312 12.2031 4.70312C11.9427 4.70312 11.7214 4.61198 11.5391 4.42969C11.3568 4.2474 11.2656 4.02604 11.2656 3.76562C11.2656 3.49479 11.3568 3.26562 11.5391 3.07812C11.7214 2.89062 11.9427 2.79687 12.2031 2.79687C12.4635 2.79687 12.6901 2.89323 12.8828 3.08594C13.0755 3.27865 13.1719 3.50521 13.1719 3.76562Z"
-                fill="#666666"/>
+                fill="#666666" />
             </svg>
           </a>
         </li>
@@ -287,10 +299,11 @@
       </ul>
       <a class="page-footer__copyright copyright" href="https://htmlacademy.ru/intensive/adaptive">
         <p class="copyright__text">HTML Academy</p>
-        <svg class="copyright__icon" width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg class="copyright__icon" width="27" height="34" viewBox="0 0 27 34" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
           <path
             d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z"
-            fill="#666666"/>
+            fill="#666666" />
         </svg>
       </a>
     </div>
