--- a/source/form.html
+++ b/source/form.html
@@ -13,8 +13,12 @@
     <div class="page-header__container">
       <div class="page-header__wrapper">
         <a class="page-header__logo logo" href="#">
-          <img src="img/logo-mobile.svg" width="33" height="37" alt="Логотип">
-          <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" >
+            <img class="logo__icon" src="img/logo-mobile-icon.svg" alt="Логотип">
+            <img class="logo__text" src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
+          </picture>
         </a>
         <button class="page-header__toggle page-header__toggle--closed" type="button">
           <span class="visually-hidden">Открыть меню</span>
